Bug 259000 - [LibWPE] Fix click count logic
Summary: [LibWPE] Fix click count logic
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Don Olmstead
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-07-07 15:27 PDT by Don Olmstead
Modified: 2023-07-07 18:21 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Don Olmstead 2023-07-07 15:27:54 PDT
....
Comment 1 Radar WebKit Bug Importer 2023-07-07 15:28:06 PDT
<rdar://problem/111929985>
Comment 2 Don Olmstead 2023-07-07 15:29:22 PDT
Doh accidentally added in security....
Comment 3 Don Olmstead 2023-07-07 15:33:27 PDT
Pull request: https://github.com/WebKit/WebKit/pull/15651
Comment 4 EWS 2023-07-07 18:21:29 PDT
Committed 265874@main (4776b34f03c7): <https://commits.webkit.org/265874@main>

Reviewed commits have been landed. Closing PR #15651 and removing active labels.