[LibWPE] Fix click count logic https://bugs.webkit.org/show_bug.cgi?id=259000

Reviewed by Michael Catanzaro.

When comparing screen coordinates for a click `==` was used instead of
a subtraction. Also modify the threshold to be an int so there isn't
a type warning since `std::abs` outputs an `int` not an `unsigned`.

* Source/WebKit/Shared/libwpe/WebEventFactory.cpp:
(WebKit::clickCount):

Canonical link: https://commits.webkit.org/265874@main